--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,9 @@
-logging:
-  level: INFO
-  loggers:
-    org.example: DEBUG
+server:
+  type: default
+  minThreads: 1
+  applicationConnectors:
+    - type: http
+      port: 9098
+  adminConnectors:
+    - type: http
+      port: 9099
